--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -10,3 +10,11 @@
     display: flex;
     justify-content: center;
 }
+.post{
+    display: flex;
+    padding: 15px;
+    border: 2px solid black;
+    margin-top: 15px;
+    justify-content: space-between;
+    align-items: center;
+}
